Start of transports.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@4663 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -238,3 +238,9 @@ FASTPATH_OFFLINE_IMAGE_24x24 = images/fastpath24_offline.png
 USER1_ADD_16x16 = images/user1_add.png
 END_BUTTON_24x24 = images/end_button_24x24.png
 POWERED_BY_IMAGE = images/powered_by.png
+
+# Transport images
+AIM_TRANSPORT_ACTIVE_IMAGE = images/aim.gif
+AIM_TRANSPORT_INACTIVE_IMAGE = images/aim-gray.gif
+MSN_TRANSPORT_ACTIVE_IMAGE = images/msn.gif
+MSN_TRANSPORT_INACTIVE_IMAGE = images/msn-gray.gif
