1) Added Yahoo transport support.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@4690 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -244,3 +244,5 @@ AIM_TRANSPORT_ACTIVE_IMAGE = images/aim.gif
 AIM_TRANSPORT_INACTIVE_IMAGE = images/aim-gray.gif
 MSN_TRANSPORT_ACTIVE_IMAGE = images/msn.gif
 MSN_TRANSPORT_INACTIVE_IMAGE = images/msn-gray.gif
+YAHOO_TRANSPORT_ACTIVE_IMAGE = images/yahoo.gif
+YAHOO_TRANSPORT_INACTIVE_IMAGE = images/yahoo-gray.gif
