Adding stale room icon support
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@4899 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -89,7 +89,7 @@ MAIL_16x16 = images/mail_16x16.png
 MAIL_FORWARD_16x16 = images/mail_forward_16x16.png
 MAIL_INTO_16x16 = images/mail_into_16x16.png
 RED_BALL = images/red-ball.png
-GREEN_BALL = images/green-ball.png
+GREEN_BALL = images/im_available.png
 BLUE_BALL = images/blue-ball.png
 YELLOW_BALL = images/yellow-ball.png
 PAWN_GLASS_GREEN = images/pawn_glass_green.png
@@ -180,7 +180,7 @@ SERVER_ICON = images/server.png
 BOOKMARK_ICON = images/bookmark.png
 ADD_BOOKMARK_ICON = images/bookmark_add.png
 DELETE_BOOKMARK_ICON = images/bookmark_delete.png
-CLEAR_BALL_ICON = images/bullet_ball_glass_clear.png
+CLEAR_BALL_ICON = images/im_unavailable.png
 CALL_ICON = images/call.png
 PROFILE_ICON = images/profile.png
 SEND_FILE_ICON = images/document_into.png
@@ -246,3 +246,10 @@ MSN_TRANSPORT_ACTIVE_IMAGE = images/msn.gif
 MSN_TRANSPORT_INACTIVE_IMAGE = images/msn-gray.gif
 YAHOO_TRANSPORT_ACTIVE_IMAGE = images/yahoo.gif
 YAHOO_TRANSPORT_INACTIVE_IMAGE = images/yahoo-gray.gif
+
+#Stale Images
+IM_AVAILABLE_STALE_IMAGE = images/im_available_stale.png
+IM_AWAY_STALE_IMAGE = images/im_away_stale.png
+IM_DND_STALE_IMAGE = images/im_dnd_stale.png
+IM_FREE_CHAT_STALE_IMAGE = images/im_free_chat_stale.png
+IM_UNAVAILABLE_STALE_IMAGE = images/im_unavailable_stale.png
