--- a/src/plugins/apple/build.xml
+++ b/src/plugins/apple/build.xml
@@ -1,7 +1,7 @@
 <project name="apple" default="jar" basedir=".">
 
     <property name="client.dir" value="../.."/>
-    <property name="client.lib.dir" value="${client.dir}/libs"/>
+    <property name="client.lib.dir" value="${client.dir}/target/build/lib"/>
     <property name="client.classes.dir" value="${client.dir}/target/classes"/>
 
     <property name="target.dir" value="${basedir}/target"/>
