--- a/src/plugins/apple/build.xml
+++ b/src/plugins/apple/build.xml
@@ -1,6 +1,6 @@
 <project name="apple" default="jar" basedir=".">
 
-    <property name="client.dir" value="../.."/>
+    <property name="client.dir" value="../../.."/>
     <property name="client.lib.dir" value="${client.dir}/target/build/lib"/>
     <property name="client.classes.dir" value="${client.dir}/target/classes"/>
 
@@ -26,9 +26,9 @@
         <javac srcdir="${src.dir}"
                destdir="${classes.dir}"
                classpathref="lib.classpath"
-               source="1.4"
+               source="1.5"
                debug="true"
-               target="1.4"/>
+               target="1.5"/>
     </target>
 
     <target name="jar.classes" depends="compile">
