--- a/src/plugins/growl/build.xml
+++ b/src/plugins/growl/build.xml
@@ -1,7 +1,7 @@
 <project name="growl" default="jar" basedir=".">
 
-    <property name="client.dir" value="../.."/>
-    <property name="client.lib.dir" value="${client.dir}/libs"/>
+    <property name="client.dir" value="../../.."/>
+    <property name="client.lib.dir" value="${client.dir}/target/build/libs"/>
     <property name="client.classes.dir" value="${client.dir}/target/classes"/>
     <property name="apple.plugin.classes" value="../apple/classes"/>
 
@@ -28,9 +28,9 @@
         <javac srcdir="${src.dir}"
                destdir="${classes.dir}"
                classpathref="lib.classpath"
-               source="1.4"
+               source="1.5"
                debug="true"
-               target="1.4"/>
+               target="1.5"/>
 
     </target>
 
