Fixing Growl Support.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@4913 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/growl/build.xml
+++ b/src/plugins/growl/build.xml
@@ -1,7 +1,7 @@
 <project name="growl" default="jar" basedir=".">
 
     <property name="client.dir" value="../../.."/>
-    <property name="client.lib.dir" value="${client.dir}/target/build/libs"/>
+    <property name="client.lib.dir" value="${client.dir}/target/build/lib"/>
     <property name="client.classes.dir" value="${client.dir}/target/classes"/>
     <property name="apple.plugin.classes" value="../apple/classes"/>
 
