1) Remove time chat was started. 2) Fixed SPARK-336 Broadcast error. 3) Fixed Applet Plugin 4) Fixed Growl Plugin
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@4925 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/apple/src/plugin.xml
+++ b/src/plugins/apple/src/plugin.xml
@@ -6,7 +6,7 @@
     <homePage>http://www.jivesoftware.com</homePage>
     <email>andrew@jivesoftware.com</email>
     <description>Gives Spark mac notification capabilities and other enhancements.</description>
-    <class>org.jivesoftware.spark.plugin.apple.ApplePlugin</class>
+    <class>com.jivesoftware.spark.plugin.apple.ApplePlugin</class>
     <minSparkVersion>2.0.0.1</minSparkVersion>
 </plugin>
 
