--- a/src/java/org/jivesoftware/resource/emotion.properties
+++ b/src/java/org/jivesoftware/resource/emotion.properties
@@ -1,19 +1,19 @@
-":)" = images/emoticons/happy.gif
-:-) = images/emoticons/happy.gif
-:( = images/emoticons/sad.gif
-:-( = images/emoticons/sad.gif
-:D = images/emoticons/grin.gif
-:x = images/emoticons/love.gif
-;\ = images/emoticons/mischief.gif
-B-) = images/emoticons/cool.gif
-]:) = images/emoticons/devil.gif
-:p = images/emoticons/silly.gif
-X-( = images/emoticons/angry.gif
-:^0 = images/emoticons/laugh.gif
-;) = images/emoticons/wink.gif
-;-) = images/emoticons/wink.gif
-:8} = images/emoticons/blush.gif
-:_| = images/emoticons/cry.gif
-?:| = images/emoticons/confused.gif
-:0 = images/emoticons/shocked.gif
-:| = images/emoticons/plain.gif
+":)" = images/emoticons/happy.png
+:-) = images/emoticons/happy.png
+:( = images/emoticons/sad.png
+:-( = images/emoticons/sad.png
+:D = images/emoticons/grin.png
+:x = images/emoticons/love.png
+;\ = images/emoticons/mischief.png
+B-) = images/emoticons/cool.png
+]:) = images/emoticons/devil.png
+:p = images/emoticons/silly.png
+X-( = images/emoticons/angry.png
+:^0 = images/emoticons/laugh.png
+;) = images/emoticons/wink.png
+;-) = images/emoticons/wink.png
+:8} = images/emoticons/blush.png
+:_| = images/emoticons/cry.png
+?:| = images/emoticons/confused.png
+:0 = images/emoticons/shocked.png
+:| = images/emoticons/plain.png
