--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -246,6 +246,8 @@ MSN_TRANSPORT_ACTIVE_IMAGE = images/msn.gif
 MSN_TRANSPORT_INACTIVE_IMAGE = images/msn-gray.gif
 YAHOO_TRANSPORT_ACTIVE_IMAGE = images/yahoo.gif
 YAHOO_TRANSPORT_INACTIVE_IMAGE = images/yahoo-gray.gif
+ICQ_TRANSPORT_ACTIVE_IMAGE = images/icq.gif
+ICQ_TRANSPORT_INACTIVE_IMAGE = images/icq-gray.gif
 
 #Stale Images
 IM_AVAILABLE_STALE_IMAGE = images/im_available_stale.png
