Updating Profile Image.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5539 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -225,6 +225,7 @@ STICKY_NOTE_IMAGE = images/sticky.png
 HISTORY_24x24 = images/history-24x24.png
 PANE_UP_ARROW_IMAGE = images/metallic_up.png
 PANE_DOWN_ARROW_IMAGE = images/metallic_down.png
+PROFILE_IMAGE_16x16 = images/profile_16x16.png
 
 #Fastpath Icons
 FASTPATH_IMAGE_16x16 = images/fastpath16.png
