Update with new images.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5593 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -104,7 +104,7 @@ LOGIN_KEY_IMAGE = images/login-key.png
 BRICKWALL_IMAGE = images/brickwall.png
 MODERATOR_IMAGE = images/moderator.gif
 DESKTOP_IMAGE = images/desktop.png
-SPELL_CHECK_IMAGE = images/text_ok.png
+SPELL_CHECK_IMAGE = images/spellcheck_16x16.png
 BUSY_IMAGE = images/busy.gif
 CLOSE_IMAGE = images/close.png
 VIEW_IMAGE = images/view.png
@@ -173,7 +173,7 @@ IM_DND = images/im_dnd.png
 IM_AWAY = images/im_away.png
 MESSAGE_AWAY = images/message_away.png
 MESSAGE_DND = images/message_dnd.png
-ERASER_IMAGE = images/eraser.gif
+ERASER_IMAGE = images/eraser.png
 TOOLBAR_BACKGROUND = images/toolbar.png
 TRAFFIC_LIGHT_IMAGE = images/traffic-light.png
 SERVER_ICON = images/server.png
