--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -226,6 +226,7 @@ HISTORY_24x24 = images/history-24x24.png
 PANE_UP_ARROW_IMAGE = images/metallic_up.png
 PANE_DOWN_ARROW_IMAGE = images/metallic_down.png
 PROFILE_IMAGE_16x16 = images/profile_16x16.png
+LIGHTBULB_ON_16x16_IMAGE = images/lightbulb_on.png
 
 #Fastpath Icons
 FASTPATH_IMAGE_16x16 = images/fastpath16.png
