Fixing translator to handle new Google Translation mapping.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5909 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/translator/plugin.xml
+++ b/src/plugins/translator/plugin.xml
@@ -2,10 +2,10 @@
 <plugin>
     <name>Translator Plugin</name>
     <class>org.jivesoftware.spark.translator.TranslatorPlugin</class>
-    <author>Nick Hill</author>
-    <version>1.0</version>
+    <author>Jive Software</author>
+    <version>1.1</version>
     <homePage>http://www.jivesoftware.com</homePage>
     <description>Translates instant messages between users using Google Translation Service.</description>
-    <email>nick@jivesoftware.com</email>
+    <email>spark@jivesoftware.com</email>
     <minSparkVersion>2.0.2</minSparkVersion>
 </plugin>
