Continue working on themes.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@6021 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -3,7 +3,7 @@ APPLICATION_NAME = Spark
 SHORT_NAME = spark
 LOGIN_DIALOG_BACKGROUND_IMAGE =  images/login_dialog_background.png
 TOP_BOTTOM_BACKGROUND_IMAGE = images/top_bottom_background_image.png
-SECONDARY_BACKGROUND_IMAGE = images/secondary_background_image.png
+SECONDARY_BACKGROUND_IMAGE = images/steel.png
 
 
 # Branding only
