--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -113,6 +113,7 @@ ON_PHONE_IMAGE = images/on-phone.png
 REFRESH_IMAGE = images/refresh.png
 CLOSE_WHITE_X_IMAGE = images/close_white.png
 CLOSE_DARK_X_IMAGE = images/close_dark.png
+PALETTE_24x24_IMAGE = images/palette_24x24.png
 
 
 # Global Values
