Adding Docking Framework.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@6742 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -261,3 +261,6 @@ IM_AWAY_STALE_IMAGE = images/im_away_stale.png
 IM_DND_STALE_IMAGE = images/im_dnd_stale.png
 IM_FREE_CHAT_STALE_IMAGE = images/im_free_chat_stale.png
 IM_UNAVAILABLE_STALE_IMAGE = images/im_unavailable_stale.png
+
+#Misc
+DIVIDER_IMAGE = images/divider.png
