--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -264,3 +264,8 @@ IM_UNAVAILABLE_STALE_IMAGE = images/im_unavailable_stale.png
 
 #Misc
 DIVIDER_IMAGE = images/divider.png
+
+
+#Phone
+DIAL_PHONE_IMAGE_24x24 = images/phone_call.png
+DIAL_PHONE_IMAGE_16x16 = images/icon_phone-call_16x16.png
