--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -269,3 +269,4 @@ DIVIDER_IMAGE = images/divider.png
 #Phone
 DIAL_PHONE_IMAGE_24x24 = images/phone_call.png
 DIAL_PHONE_IMAGE_16x16 = images/icon_phone-call_16x16.png
+COMPUTER_IMAGE_16x16 = images/icon_computer_16x16.png
