--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -17,6 +17,7 @@ LOGIN_DIALOG_AUTHENTICATING = Authenticating...
 #MainWindow
 MAIN_IMAGE = images/message.png
 MAIN_IMAGE_ICO = images/icon_16.ico
+MAIN_ICNS_FILE = images/message.icns
 SMALL_CHECK = images/smallCheck.png
 SMALL_DELETE = images/smallDelete.png
 AVAILABLE_USER = images/availableUser.png
