--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -265,9 +265,11 @@ IM_UNAVAILABLE_STALE_IMAGE = images/im_unavailable_stale.png
 
 #Misc
 DIVIDER_IMAGE = images/divider.png
-
+LIGHTING_BOLT_IMAGE = images/lightning16.png
+HEADSET_IMAGE = images/headset.png
 
 #Phone
 DIAL_PHONE_IMAGE_24x24 = images/phone_call.png
 DIAL_PHONE_IMAGE_16x16 = images/icon_phone-call_16x16.png
 COMPUTER_IMAGE_16x16 = images/icon_computer_16x16.png
+
