Added system look and feel preferences.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7726 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -15,7 +15,7 @@ LOGIN_DIALOG_LOGIN_TITLE = Spark
 LOGIN_DIALOG_AUTHENTICATING = Authenticating...
 
 #MainWindow
-MAIN_IMAGE = images/message.png
+MAIN_IMAGE = images/spark-16x16.png
 MAIN_IMAGE_ICO = images/icon_16.ico
 MAIN_ICNS_FILE = images/message.icns
 SMALL_CHECK = images/smallCheck.png
