1) Upate plugin files for os specified runtimes. 2) Update jingle and softphone.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7818 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/jingle/plugin.xml
+++ b/src/plugins/jingle/plugin.xml
@@ -7,4 +7,5 @@
     <description>Allows for Pc to Pc calling.</description>
     <class>org.jivesoftware.sparkplugin.JinglePlugin</class>
     <minSparkVersion>2.5.0</minSparkVersion>
+    <os>Windows,mac</os>
 </plugin>
