Updating for 2.5.0 release.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7846 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -16,7 +16,7 @@ LOGIN_DIALOG_AUTHENTICATING = Authenticating...
 
 #MainWindow
 MAIN_IMAGE = images/spark-16x16.png
-TRAY_IMAGE = images/spark-16x16.png
+TRAY_IMAGE = images/message.png
 SPARK_IMAGE_32x32 = images/spark-32x32.png
 MAIN_IMAGE_ICO = images/icon_16.ico
 MAIN_ICNS_FILE = images/message.icns
