--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -269,6 +269,7 @@ IM_UNAVAILABLE_STALE_IMAGE = images/im_unavailable_stale.png
 DIVIDER_IMAGE = images/divider.png
 LIGHTING_BOLT_IMAGE = images/lightning16.png
 HEADSET_IMAGE = images/headset.png
+BUZZ_IMAGE = images/bell.png
 
 #Phone
 DIAL_PHONE_IMAGE_24x24 = images/phone_call.png
