Small image update.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7989 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -229,8 +229,8 @@ README_IMAGE = images/doc-readme-16x16.gif
 DOWN_OPTION_IMAGE = images/option.png
 STICKY_NOTE_IMAGE = images/sticky.png
 HISTORY_24x24 = images/history-24x24.png
-PANE_UP_ARROW_IMAGE = images/metallic_up.png
-PANE_DOWN_ARROW_IMAGE = images/metallic_down.png
+PANE_UP_ARROW_IMAGE = images/blueArrowRight.png
+PANE_DOWN_ARROW_IMAGE = images/blueArrowDown.png
 PROFILE_IMAGE_16x16 = images/profile_16x16.png
 LIGHTBULB_ON_16x16_IMAGE = images/lightbulb_on.png
 DUMMY_CONTACT_IMAGE = images/dummyContact.png
