Starting work on SPARK-712.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8041 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -276,3 +276,9 @@ DIAL_PHONE_IMAGE_24x24 = images/phone_call.png
 DIAL_PHONE_IMAGE_16x16 = images/icon_phone-call_16x16.png
 COMPUTER_IMAGE_16x16 = images/icon_computer_16x16.png
 
+# Conferences
+CONFERENCE_IMAGE_48x48 = images/messages_48x48.png
+ACCEPT_INVITE_IMAGE = images/accept.png
+REJECT_INVITE_IMAGE = images/reject.png
+INVITE_MORE_IMAGE = images/invitemore.png
+
