--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -234,6 +234,7 @@ PANE_DOWN_ARROW_IMAGE = images/blueArrowDown.png
 PROFILE_IMAGE_16x16 = images/profile_16x16.png
 LIGHTBULB_ON_16x16_IMAGE = images/lightbulb_on.png
 DUMMY_CONTACT_IMAGE = images/dummyContact.png
+CALENDAR_IMAGE = images/icon_calendarpicker.gif
 
 #Fastpath Icons
 FASTPATH_IMAGE_16x16 = images/fastpath16.png
