Adding Linux Plugin.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8922 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/linux/plugin.xml
+++ b/src/plugins/linux/plugin.xml
@@ -5,8 +5,8 @@
     <author>Derek DeMoro</author>
     <homePage>http://www.jivesoftware.com</homePage>
     <email>derek@jivesoftware.com</email>
-    <description>Adds Linux specific functionallity.</description>
-    <class>org.jivesoftware.spark.plugins.transfersettings.FileTransferSettingsPlugin</class>
+    <description>Adds Linux specific functionality.</description>
+    <class>org.jivesoftware.spark.plugins.LinuxPlugin</class>
     <minSparkVersion>2.5.0</minSparkVersion>
 </plugin>
 
