Adding GTalk and XMPP Gateways
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8929 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -258,6 +258,10 @@ YAHOO_TRANSPORT_ACTIVE_IMAGE = images/yahoo.gif
 YAHOO_TRANSPORT_INACTIVE_IMAGE = images/yahoo-gray.gif
 ICQ_TRANSPORT_ACTIVE_IMAGE = images/icq.gif
 ICQ_TRANSPORT_INACTIVE_IMAGE = images/icq-gray.gif
+GTALK_TRANSPORT_ACTIVE_IMAGE = images/gtalk.gif
+GTALK_TRANSPORT_INACTIVE_IMAGE = images/gtalk-gray.gif
+XMPP_TRANSPORT_ACTIVE_IMAGE = images/xmpp.gif
+XMPP_TRANSPORT_INACTIVE_IMAGE = images/xmpp-gray.gif
 
 #Stale Images
 IM_AVAILABLE_STALE_IMAGE = images/im_available_stale.png
