Refactoring System Tray
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8933 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/linux/plugin.xml
+++ b/src/plugins/linux/plugin.xml
@@ -1,12 +1,12 @@
 <!-- Define your plugins -->
 <plugin>
-    <name>Linux plugin for Spark IM Client</name>
+    <name>Notification and System Tray Plugin for Spark IM</name>
     <version>1.0</version>
     <author>Derek DeMoro</author>
     <homePage>http://www.jivesoftware.com</homePage>
     <email>derek@jivesoftware.com</email>
-    <description>Adds Linux specific functionality.</description>
-    <class>org.jivesoftware.spark.plugins.LinuxPlugin</class>
+    <description>Adds System Tray functionality.</description>
+    <class>org.jivesoftware.spark.plugins.SystemTrayPlugin</class>
     <minSparkVersion>2.5.0</minSparkVersion>
 </plugin>
 
