Updating JNI Handling.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8983 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -1,6 +1,6 @@
 MAIN_IMAGE = images/spark.png
 APPLICATION_NAME = Spark
-SHORT_NAME = spark
+SHORT_NAME = Spark
 LOGIN_DIALOG_BACKGROUND_IMAGE =  images/login_dialog_background.png
 TOP_BOTTOM_BACKGROUND_IMAGE = images/top_bottom_background_image.png
 SECONDARY_BACKGROUND_IMAGE = images/steel.png
