Updating images for system tray.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9027 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -177,8 +177,9 @@ ADD_IMAGE_24x24 = images/add_24x24.png
 TELEPHONE_24x24 = images/telephone_24x24.png
 IM_DND = images/im_dnd.png
 IM_AWAY = images/im_away.png
-MESSAGE_AWAY = images/message_away.png
-MESSAGE_DND = images/message_dnd.png
+MESSAGE_AWAY = images/Away.png
+MESSAGE_DND = images/DoNotDisturb.png
+OFFLINE_IMAGE = images/Offline.png
 ERASER_IMAGE = images/eraser.png
 TOOLBAR_BACKGROUND = images/toolbar.png
 TRAFFIC_LIGHT_IMAGE = images/traffic-light.png
