[SPARK-868] Now displaying full status message in tooltip. [SPARK-867] Added GaduGadu, IRC, and SIMPLE gateway support into mainline. [SPARK-820] Display JID if nickname is an empty string. Misc cleanup here and there. Avatar size is now configurable. All contact list items now mirror height of avatar size for consistancy.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9429 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -263,6 +263,12 @@ GTALK_TRANSPORT_ACTIVE_IMAGE = images/gtalk.gif
 GTALK_TRANSPORT_INACTIVE_IMAGE = images/gtalk-gray.gif
 XMPP_TRANSPORT_ACTIVE_IMAGE = images/xmpp.gif
 XMPP_TRANSPORT_INACTIVE_IMAGE = images/xmpp-gray.gif
+IRC_TRANSPORT_ACTIVE_IMAGE = images/irc.gif
+IRC_TRANSPORT_INACTIVE_IMAGE = images/irc-gray.gif
+GADUGADU_TRANSPORT_ACTIVE_IMAGE = images/gadugadu.gif
+GADUGADU_TRANSPORT_INACTIVE_IMAGE = images/gadugadu-gray.gif
+SIMPLE_TRANSPORT_ACTIVE_IMAGE = images/simple.gif
+SIMPLE_TRANSPORT_INACTIVE_IMAGE = images/simple-gray.gif
 
 #Stale Images
 IM_AVAILABLE_STALE_IMAGE = images/im_available_stale.png
