Added QQ transport from lizongbo, updated chinese translation, and fix for language plugin.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9798 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -269,6 +269,8 @@ GADUGADU_TRANSPORT_ACTIVE_IMAGE = images/gadugadu.gif
 GADUGADU_TRANSPORT_INACTIVE_IMAGE = images/gadugadu-gray.gif
 SIMPLE_TRANSPORT_ACTIVE_IMAGE = images/simple.gif
 SIMPLE_TRANSPORT_INACTIVE_IMAGE = images/simple-gray.gif
+QQ_TRANSPORT_ACTIVE_IMAGE = images/qq.gif
+QQ_TRANSPORT_INACTIVE_IMAGE = images/qq-gray.gif
 
 #Stale Images
 IM_AVAILABLE_STALE_IMAGE = images/im_available_stale.png
