Improved the groupchat highlighting with extra menu features, including less code when determining messages. Improved the gateway images to fit better with the new design. Improved the button backgrounds to some extent.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10373 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -253,22 +253,22 @@ POWERED_BY_IMAGE = images/powered_by.png
 # Transport images
 AIM_TRANSPORT_ACTIVE_IMAGE = images/aim.gif
 AIM_TRANSPORT_INACTIVE_IMAGE = images/aim-gray.gif
-MSN_TRANSPORT_ACTIVE_IMAGE = images/msn.gif
-MSN_TRANSPORT_INACTIVE_IMAGE = images/msn-gray.gif
-YAHOO_TRANSPORT_ACTIVE_IMAGE = images/yahoo.gif
-YAHOO_TRANSPORT_INACTIVE_IMAGE = images/yahoo-gray.gif
-ICQ_TRANSPORT_ACTIVE_IMAGE = images/icq.gif
-ICQ_TRANSPORT_INACTIVE_IMAGE = images/icq-gray.gif
-GTALK_TRANSPORT_ACTIVE_IMAGE = images/gtalk.gif
-GTALK_TRANSPORT_INACTIVE_IMAGE = images/gtalk-gray.gif
-XMPP_TRANSPORT_ACTIVE_IMAGE = images/xmpp.gif
-XMPP_TRANSPORT_INACTIVE_IMAGE = images/xmpp-gray.gif
-IRC_TRANSPORT_ACTIVE_IMAGE = images/irc.gif
-IRC_TRANSPORT_INACTIVE_IMAGE = images/irc-gray.gif
+MSN_TRANSPORT_ACTIVE_IMAGE = images/msn.png
+MSN_TRANSPORT_INACTIVE_IMAGE = images/msn-gray.png
+YAHOO_TRANSPORT_ACTIVE_IMAGE = images/yahoo.png
+YAHOO_TRANSPORT_INACTIVE_IMAGE = images/yahoo-gray.png
+ICQ_TRANSPORT_ACTIVE_IMAGE = images/icq.png
+ICQ_TRANSPORT_INACTIVE_IMAGE = images/icq-gray.png
+GTALK_TRANSPORT_ACTIVE_IMAGE = images/gtalk.png
+GTALK_TRANSPORT_INACTIVE_IMAGE = images/gtalk-gray.png
+XMPP_TRANSPORT_ACTIVE_IMAGE = images/xmpp.png
+XMPP_TRANSPORT_INACTIVE_IMAGE = images/xmpp-gray.png
+IRC_TRANSPORT_ACTIVE_IMAGE = images/irc.png
+IRC_TRANSPORT_INACTIVE_IMAGE = images/irc-gray.png
 GADUGADU_TRANSPORT_ACTIVE_IMAGE = images/gadugadu.gif
 GADUGADU_TRANSPORT_INACTIVE_IMAGE = images/gadugadu-gray.gif
-SIMPLE_TRANSPORT_ACTIVE_IMAGE = images/simple.gif
-SIMPLE_TRANSPORT_INACTIVE_IMAGE = images/simple-gray.gif
+SIMPLE_TRANSPORT_ACTIVE_IMAGE = images/simple.png
+SIMPLE_TRANSPORT_INACTIVE_IMAGE = images/simple-gray.png
 QQ_TRANSPORT_ACTIVE_IMAGE = images/qq.gif
 QQ_TRANSPORT_INACTIVE_IMAGE = images/qq-gray.gif
 
