[SPARK-1009] Make gateway icons more transparent to fit with new theme (fixed) [SPARK-1010] On toast popup from a MUC show the nickname of whoever said the comment (fixed, Daniel's request ;) ) [SPARK-1011] When someone says my name in an MUC, show a custom toast popup if enabled (fixed) Also the beginnings of linux system tray custom new message icon
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10397 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -179,6 +179,7 @@ IM_DND = images/im_dnd.png
 IM_AWAY = images/im_away.png
 MESSAGE_AWAY = images/Away.png
 MESSAGE_DND = images/DoNotDisturb.png
+MESSAGE_NEW_TRAY = images/spark_tray_message-16x16.png
 OFFLINE_IMAGE = images/Offline.png
 ERASER_IMAGE = images/eraser.png
 TOOLBAR_BACKGROUND = images/toolbar.png
