Tasks fixed thanks to cstux's patch.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10661 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -237,6 +237,7 @@ PROFILE_IMAGE_16x16 = images/profile_16x16.png
 LIGHTBULB_ON_16x16_IMAGE = images/lightbulb_on.png
 DUMMY_CONTACT_IMAGE = images/dummyContact.png
 CALENDAR_IMAGE = images/icon_calendarpicker.gif
+TASK_DELETE_IMAGE = images/delete.png
 
 #Fastpath Icons
 FASTPATH_IMAGE_16x16 = images/fastpath16.png
