add new features SPARK-971  - System Tray notification about incoming messages SPARK-972  - Typing Notification in System Tray
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10991 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -180,6 +180,7 @@ IM_AWAY = images/im_away.png
 MESSAGE_AWAY = images/Away.png
 MESSAGE_DND = images/DoNotDisturb.png
 MESSAGE_NEW_TRAY = images/spark_tray_message-16x16.png
+TYPING_TRAY = images/message_edit.png
 OFFLINE_IMAGE = images/Offline.png
 ERASER_IMAGE = images/eraser.png
 TOOLBAR_BACKGROUND = images/toolbar.png
