--- a/src/plugins/jingle/plugin.xml
+++ b/src/plugins/jingle/plugin.xml
@@ -7,5 +7,5 @@
     <description>Allows for Pc to Pc calling.</description>
     <class>org.jivesoftware.sparkplugin.JinglePlugin</class>
     <minSparkVersion>2.5.0</minSparkVersion>
-    <os>Windows,mac</os>
+    <os>Windows,mac,linux</os>
 </plugin>
