--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -17,6 +17,8 @@ LOGIN_DIALOG_AUTHENTICATING = Authenticating...
 #MainWindow
 MAIN_IMAGE = images/spark-16x16.png
 TRAY_IMAGE = images/spark-16x16.png
+TRAY_AWAY = images/message_away.png
+TRAY_DND = images/message_dnd.png
 SPARK_IMAGE_32x32 = images/spark-32x32.png
 MAIN_IMAGE_ICO = images/icon_16.ico
 MAIN_ICNS_FILE = images/message.icns
