add myspace, facebook and sametime
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11159 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -276,6 +276,12 @@ SIMPLE_TRANSPORT_ACTIVE_IMAGE = images/simple.png
 SIMPLE_TRANSPORT_INACTIVE_IMAGE = images/simple-gray.png
 QQ_TRANSPORT_ACTIVE_IMAGE = images/qq.gif
 QQ_TRANSPORT_INACTIVE_IMAGE = images/qq-gray.gif
+FACEBOOK_TRANSPORT_ACTIVE_IMAGE= images/facebook.gif
+FACEBOOK_TRANSPORT_INACTIVE_IMAGE= images/facebook-gray.gif
+MYSPACE_TRANSPORT_ACTIVE_IMAGE= images/myspaceim.gif
+MYSPACE_TRANSPORT_INACTIVE_IMAGE= images/myspaceim-gray.gif
+SAMETIME_TRANSPORT_ACTIVE_IMAGE= images/sametime.gif
+SAMETIME_TRANSPORT_INACTIVE_IMAGE= images/sametime-gray.gif
 
 #Stale Images
 IM_AVAILABLE_STALE_IMAGE = images/im_available_stale.png
