SPARK-1123 - Linux system tray improvements thx to Konstantin
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11434 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -19,6 +19,13 @@ MAIN_IMAGE = images/spark-16x16.png
 TRAY_IMAGE = images/spark-16x16.png
 TRAY_AWAY = images/Away.png
 TRAY_DND = images/DoNotDisturb.png
+TRAY_OFFLINE = images/spark_tray_offline-16x16.png
+TRAY_CONNECTING = images/spark_tray_connecting-16x16.png
+TRAY_IMAGE_LINUX = images/spark-24x24.png
+TRAY_AWAY_LINUX = images/Away-24x24.png
+TRAY_DND_LINUX = images/DoNotDisturb-24x24.png
+TRAY_OFFLINE_LINUX = images/spark_tray_offline-24x24.png
+TRAY_CONNECTING_LINUX = images/spark_tray_connecting-24x24.png
 SPARK_IMAGE_32x32 = images/spark-32x32.png
 MAIN_IMAGE_ICO = images/icon_16.ico
 MAIN_ICNS_FILE = images/message.icns
@@ -182,7 +189,9 @@ IM_AWAY = images/im_away.png
 MESSAGE_AWAY = images/Away.png
 MESSAGE_DND = images/DoNotDisturb.png
 MESSAGE_NEW_TRAY = images/spark_tray_message-16x16.png
+MESSAGE_NEW_TRAY_LINUX = images/spark_tray_message-24x24.png
 TYPING_TRAY = images/message_edit.png
+TYPING_TRAY_LINUX = images/spark_tray_typing-24x24.png.png
 OFFLINE_IMAGE = images/Offline.png
 ERASER_IMAGE = images/eraser.png
 TOOLBAR_BACKGROUND = images/toolbar.png
