--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -82,6 +82,8 @@ LINK_16x16 = images/link-16x16.png
 LINK_DELETE_16x16 = images/link_delete.png
 EARTH_LOCK_16x16 = images/earth_lock-16x16.png
 LOCK_16x16 = images/lock-16x16.png
+BLOCK_CONTACT_16x16 = images/lock-16x16.png
+UNBLOCK_CONTACT_16x16 = images/lock_unlock-16x16.png
 LOCK_UNLOCK_16x16 = images/lock_unlock-16x16.png
 ONLINE_ICO = images/icon1.ico
 OFFLINE_ICO = images/icon2.ico
