SPARK-1141 - Allow to disable the add contact feature
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11717 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -30,5 +30,8 @@ PROXY_PORT =
 # Account Disabled
 ACCOUNT_DISABLED =
 
+# add Contact Disabled
+ADD_CONTACT_DISABLED = 
+
 # Change Password Disabled
 CHANGE_PASSWORD_DISABLED = 
