SPARK-1147 -  Phonebook for SIPClient
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11745 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/phone.properties
+++ b/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/phone.properties
@@ -65,8 +65,8 @@ DIAL_BUTTON_DOWN_IMAGE = images/btn_phone-dial-down_24x24.png
 DIAL_BUTTON_DISABLED_IMAGE = images/btn_phone-dial-disabled_24x24.png
 DIVIDER_IMAGE = images/divider.png
 INCOMING_CALL_IMAGE = images/icon_call-incoming_42x22.png
-TOASTER_ACCEPT_BUTTON = images/toaster_btn-accept.png
-TOASTER_REJECT_BUTTON = images/toaster_btn-reject.png
+TOASTER_ACCEPT_BUTTON = images/toaster_btn-accept2.png
+TOASTER_REJECT_BUTTON = images/toaster_btn-reject2.png
 CALL_PICKUP_IMAGE = images/icon_phone-pickup_24x24.png
 CALL_REJECT_IMAGE = images/icon_phone-reject_24x24.png
 MICROPHONE_IMAGE = images/icon_microphone_16x16.png
@@ -84,6 +84,11 @@ ON_HOLD_24x24_IMAGE = images/icon_phone-hold_24x24.png
 MUTED_24x24_IMAGE = images/icon_phone-mute_24x24.png
 TRANSFER_24x24_IMAGE = images/icon_phone-transfer_24x24.png
 BRIEFCASE_IMAGE = images/briefcase.png
+BOOKICON = images/icon_book.png
+EDITICON = images/edit_number.png
+ADDICON  = images/add_number.png
+DELICON  = images/del_number.png
+DIALICON = images/dial_number.png
 
 # Registartion Panel
 CLOSE_BUTTON = images/btn_phone-reg_close.png
