fix typing image
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11764 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -193,7 +193,7 @@ MESSAGE_DND = images/DoNotDisturb.png
 MESSAGE_NEW_TRAY = images/spark_tray_message-16x16.png
 MESSAGE_NEW_TRAY_LINUX = images/spark_tray_message-24x24.png
 TYPING_TRAY = images/message_edit.png
-TYPING_TRAY_LINUX = images/spark_tray_typing-24x24.png.png
+TYPING_TRAY_LINUX = images/spark_tray_typing-24x24.png
 OFFLINE_IMAGE = images/Offline.png
 ERASER_IMAGE = images/eraser.png
 TOOLBAR_BACKGROUND = images/toolbar.png
