Correct spelling in jingle plugin for testing if bamboo builds the windows plugins correctly
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12072 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/jingle/plugin.xml
+++ b/src/plugins/jingle/plugin.xml
@@ -4,7 +4,7 @@
     <author>Jive Software</author>
     <homePage>http://www.jivesoftware.org</homePage>
     <email>derek@jivesoftware.com</email>
-    <description>Allows for Pc to Pc calling.</description>
+    <description>Allows for PC to PC calling.</description>
     <class>org.jivesoftware.sparkplugin.JinglePlugin</class>
     <minSparkVersion>2.5.0</minSparkVersion>
     <os>Windows,mac,linux</os>
