SPARK-1258 default.properties Plugins downloading setting plugins deleting setting look and feel change setting look and feel default setting --------------------------------- polish update in spellchecker
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12158 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -1,3 +1,5 @@
+# The Login image
+# suggested image dimensions 244 x 188 pixels
 MAIN_IMAGE = images/spark.png
 APPLICATION_NAME = Spark
 SHORT_NAME = Spark
@@ -7,9 +9,14 @@ SECONDARY_BACKGROUND_IMAGE = images/steel.png
 
 
 # Branding only
-BRANDED_IMAGE =
-HOST_NAME =
-SHOW_POWERED_BY =
+# Branded images appear in the Top-Right corner, and must be included in the classpath
+# place them in src/resource/images and path will be "images/file.jpg"
+BRANDED_IMAGE = 
+# Specify a fixed Hostname
+# Changing the Hostname will also be prohibited if set
+HOST_NAME = 
+SHOW_POWERED_BY = 
+# if Custom build = true, there will be no references anywhere to igniterealtime.org
 CUSTOM = 
 
 
@@ -27,11 +34,24 @@ TAB_END_COLOR =
 PROXY_HOST =
 PROXY_PORT =
 
-# Account Disabled
-ACCOUNT_DISABLED =
+# Remove account creation Button from Loginwindow
+ACCOUNT_DISABLED = 
 
-# add Contact Disabled
+# Disables adding of contacts
 ADD_CONTACT_DISABLED = 
 
 # Change Password Disabled
 CHANGE_PASSWORD_DISABLED = 
+
+# Disable Look&Feel change || "true" = disabled ,  anything else = enabled
+LOOK_AND_FEEL_DISABLED = 
+# you can use org.jvnet.substance.skin.SubstanceBusinessBlueSteelLookAndFeel for example
+# If Setting this you should also consider disabling the above
+DEFAULT_LOOK_AND_FEEL = 
+
+# Disable Installing of Plugins
+# set true if you want to disable installing of Plugins
+INSTALL_PLUGINS_DISABLED = 
+# Disable deleting of Plugins
+# set true if you want to disable deinstalling of Plugins
+DEINSTALL_PLUGINS_DISABLED = 
