SPARK-1258 more customization
settings include:
Remove Advanced Configuration from LoginWindow

Disable Spark Updates

HelpMenu->UserGuide Location configurable
Disable HelpMenu->UserGuide

HelpMenu->HelpForum Location configurable
HelpMenu->HelpForum Text configurable
Disable HelpMenu->HelpForum


git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12161 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -1,3 +1,6 @@
+#################################################
+################# Login Window  #################
+#################################################
 # The Login image
 # suggested image dimensions 244 x 188 pixels
 MAIN_IMAGE = images/spark.png
@@ -7,18 +10,32 @@ LOGIN_DIALOG_BACKGROUND_IMAGE =  images/login_dialog_background.png
 TOP_BOTTOM_BACKGROUND_IMAGE = images/top_bottom_background_image.png
 SECONDARY_BACKGROUND_IMAGE = images/steel.png
 
+# Specify a fixed Hostname
+# Changing the Hostname will also be prohibited if set
+HOST_NAME = 
+# Proxy Settings
+PROXY_HOST =
+PROXY_PORT =
+
+# Remove account creation Button from Loginwindow
+ACCOUNT_DISABLED = 
+# Remove Advanced Configuration Button from Loginwindow
+ADVANCED_DISABLED = 
+
+
 
 # Branding only
 # Branded images appear in the Top-Right corner, and must be included in the classpath
 # place them in src/resource/images and path will be "images/file.jpg"
 BRANDED_IMAGE = 
-# Specify a fixed Hostname
-# Changing the Hostname will also be prohibited if set
-HOST_NAME = 
 SHOW_POWERED_BY = 
-# if Custom build = true, there will be no references anywhere to igniterealtime.org
-CUSTOM = 
+# Disables updateability, you should set this, if you have a custom Spark-build
+DISABLE_UPDATES = 
 
+
+#################################################
+################## Main Window ##################
+#################################################
 
 # Roster Management
 HOVER_TEXT_COLOR =
@@ -30,12 +47,10 @@ CONTACT_GROUP_END_COLOR =
 TAB_START_COLOR =
 TAB_END_COLOR =
 
-# Proxy Settings
-PROXY_HOST =
-PROXY_PORT =
 
-# Remove account creation Button from Loginwindow
-ACCOUNT_DISABLED = 
+#################################################
+################ Settings Window ################
+#################################################
 
 # Disables adding of contacts
 ADD_CONTACT_DISABLED = 
@@ -48,6 +63,24 @@ LOOK_AND_FEEL_DISABLED =
 # you can use org.jvnet.substance.skin.SubstanceBusinessBlueSteelLookAndFeel for example
 # If Setting this you should also consider disabling the above
 DEFAULT_LOOK_AND_FEEL = 
+
+# Sets the Location of the Userguide
+#Default is http://www.igniterealtime.org/builds/spark/docs/spark_user_guide.pdf
+HELP_USER_GUIDE = http://www.igniterealtime.org/builds/spark/docs/spark_user_guide.pdf
+HELP_USER_GUIDE_DISABLED = 
+# Sets the Location of the Help-Forum
+#Default is http://www.igniterealtime.org/forum/forum.jspa?forumID=49
+HELP_FORUM = http://www.igniterealtime.org/forum/forum.jspa?forumID=49
+HELP_FORUM_DISABLED = 
+# Following Text will be displayed instead of "Spark forum"
+# leave blank for default
+HELP_FORUM_TEXT = 
+
+
+#################################################
+################     Plugins     ################
+#################################################
+
 
 # Disable Installing of Plugins
 # set true if you want to disable installing of Plugins
