SPARK-1258 DISABLE_EXIT DISABLE_GROUP_ADD
SPARK-1257
when changing from JavaDefault to Substance redecorate Titlebars
(note that not all JavaDefaultSkins support this fully(e.g. cde/motif), restart in that case
corrected loading of Metal,Nimbus and CDE/Motif


git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12162 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -32,6 +32,9 @@ SHOW_POWERED_BY =
 # Disables updateability, you should set this, if you have a custom Spark-build
 DISABLE_UPDATES = 
 
+#If true, Spark cannot shut down
+DISABLE_EXIT = 
+
 
 #################################################
 ################## Main Window ##################
@@ -54,6 +57,8 @@ TAB_END_COLOR =
 
 # Disables adding of contacts
 ADD_CONTACT_DISABLED = 
+# Disables adding contact groups
+ADD_CONTACT_GROUP_DISABLED = 
 
 # Change Password Disabled
 CHANGE_PASSWORD_DISABLED = 
