--- a/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n.properties
+++ b/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n.properties
@@ -108,9 +108,9 @@ book.noEntry	= "No Entry Selected!"
 book.fillFields = "Please fill all Fields"
 book.warning	= "Attention"
 title.sip.codecs.title = Codecs
-codecs.select 	= < Select
-codecs.unselect = Unselect >
-codecs.up		= Up ^
-codecs.down		= Down v
+codecs.select 	= \u21E6 Select
+codecs.unselect = Unselect \u21E8
+codecs.up		= Up \u21E7
+codecs.down		= Down \u21E9
 codecs.audio.selected	= Selected Audio Codecs
 codecs.audio.avail		= Available Audio Codecs
