--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -293,6 +293,7 @@ MYSPACE_TRANSPORT_ACTIVE_IMAGE= images/myspaceim.gif
 MYSPACE_TRANSPORT_INACTIVE_IMAGE= images/myspaceim-gray.gif
 SAMETIME_TRANSPORT_ACTIVE_IMAGE= images/sametime.gif
 SAMETIME_TRANSPORT_INACTIVE_IMAGE= images/sametime-gray.gif
+TRANSPORT_ICON = images/transport.png
 
 #Stale Images
 IM_AVAILABLE_STALE_IMAGE = images/im_available_stale.png
